Address color contrast issues

--- a/source/css/_partials/definitions.scss
+++ b/source/css/_partials/definitions.scss
@@ -1,8 +1,8 @@
 $body-text-color:			#444;
 $header-text-color:			#444;
 $banner-text-color:			#444;
-$slug-text-color:			#888;
-$copyright-text-color:		#888;
+$slug-text-color:			#666;
+$copyright-text-color:		#666;
 
 $section-rule-color:		#BBB;
 
